test-legacy/tests/node/run/startup_errors.txt
error: the file `inputs/this-file-does-not-exist.json` does not exist
 --> tests/node/run/startup_errors.tql:8:8
  |
8 |   from f"{env("TENZIR_INPUTS")}/this-file-does-not-exist.json"
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
